--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,14 @@
     "url_kindle_accueil = \"https://www.amazon.com/b?node=154606011\"\n",
     "url_kindle_cat_art_and_photo =\"https://www.amazon.com/s?bbn=154606011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011&dc&qid=1648440703&rnid=154606011&ref=lp_154606011_nr_n_0\"\n",
     "url_kindle_cat_art_and_photo_subcat_music_p1 = \"https://www.amazon.com/s?rh=n%3A156302011&fs=true&ref=lp_156302011_sar\"\n",
+    "\n",
     "url_kindle_cat_art_and_photo_subcat_umusic_p2 = \"https://www.amazon.com/s?i=digital-text&rh=n%3A156302011&fs=true&page=2&qid=1648440846&ref=sr_pg_2\"\n",
     "url_kindle_cat_art_and_photo_subcat_umusic_p3  =\"https://www.amazon.com/s?i=digital-text&rh=n%3A156302011&fs=true&page=3&qid=1648440968&ref=sr_pg_3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 21,
    "id": "ea3aea10",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -93,7 +94,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_874/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_1008/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -127,6 +128,7 @@
    "cell_type": "markdown",
    "id": "b0ea0ae1",
    "metadata": {
+    "heading_collapsed": true,
     "tags": []
    },
    "source": [
@@ -135,9 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "id": "beffe270",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "regex_expression = \"</span> #.* in Kindle Store \" # utile pour regex"
@@ -145,9 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "97335e48",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "url_livre =\"https://www.amazon.com/gp/product/B09XFL8N77?storeType=ebooks&pf_rd_p=1a003f54-b0fb-4c1f-847d-4b886d085c2a&pf_rd_r=1S6X1FD1D0CDDESY6F9C&pd_rd_wg=OYcWw&pd_rd_i=B09XFL8N77&ref_=dbs_0_def_rwt_wigo_nfy_recs_wigo_1&pd_rd_w=n45p7&pd_rd_r=29980150-6069-4b0c-9b26-a02de52121aa\"\n",
@@ -156,19 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "e6b8f552",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.get(url_livre3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "id": "fc7ca572",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "code_de_la_page = browser.page_source\n",
@@ -177,9 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "id": "0fb54cd1",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "titre_livre = soup.find('span'  , {'class': 'a-size-extra-large'}).string"
@@ -187,17 +187,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 12,
    "id": "ecd283e5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' The Healthy Smoothie Cookbook: Breakfast Smoothie, Body Cleansing Smoothies, Digestive Smoothies, Kid-Friendly Smoothies, Low-Fat Smoothies, Best Protein Smoothies, Easy to Make Weight loss Smoothies '"
+       "' One Bossy Proposal: An Enemies to Lovers Romance '"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,9 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 15,
    "id": "16d1c8ca",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "rang_livre = soup.find_all( {'span'  : 'a-list-item'})"
@@ -218,9 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 16,
    "id": "358cd823",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "rang_vente = str(re.compile(regex_expression).search(str(rang_livre))).split()[5].replace(\"#\",\"\").replace(\",\",\"\")"
@@ -228,17 +234,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 17,
    "id": "8cbe64e4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'252902'"
+       "'14'"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +258,9 @@
   {
    "cell_type": "raw",
    "id": "5451454d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "\n"
    ]
@@ -259,7 +269,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "70b06b8f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -267,7 +279,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1f11aae8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "books_html = soup.find_all(\"article\", class_=\"product_pod\")\n",
@@ -284,8 +298,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fdac7e18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.amazon.com/s?i=digital-text&bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&fs=true&qid=1651987607&rnid=157630011&ref=sr_nr_n_1\"\n",
+    "url_page_1 = \"https://www.amazon.com/s?i=digital-text&bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&fs=true&page=1&qid=1651987613&rnid=157630011&ref=sr_pg_2\"\n",
+    "url_page_2 = \"https://www.amazon.com/s?i=digital-text&bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&fs=true&page=2&qid=1651987613&rnid=157630011&ref=sr_pg_2\"\n",
+    "url_page_3     = \"https://www.amazon.com/s?i=digital-text&bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&fs=true&page=3&qid=1651987613&rnid=157630011&ref=sr_pg_3\"\n",
+    "url_page_3bis  = \"https://www.amazon.com/s?i=digital-text&bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&fs=true&page=3&qid=1651987793&rnid=157630011&ref=sr_pg_3\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "578a143b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.get(url_page_2)\n",
+    "html_page_listing = browser.page_source\n",
+    "soup = BeautifulSoup(html_page_listing , 'lxml')\n",
+    "livres = soup.find_all('div' ,{ 'data-asin':True, 'data-component-type' : 's-search-result'}  )\n",
+    "\n",
+    "# le numéro ASIN correspeond à la gods\n",
+    "# ASIN=B098652LH8P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c0d0f48f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(livres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cbf81fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minoru Yamasaki: Humanist Architecture for a Modernist World None 48.\n",
+      "Frank Lloyd Wright: A Life (Penguin Lives) None 11.\n",
+      "Goya: A Portrait of the Artist None 14.\n",
+      "Brunel: The Man Who Built the World (Phoenix Press) None 3.\n",
+      "Mies van der Rohe: A Critical Biography, New and Revised Edition None 12.\n",
+      "Manual of Section None 14.\n",
+      "Higher: A Historic Race to the Sky and the Making of a City None 7.\n",
+      "Remodel Your Kitchen Without Going Bonkers or Broke: Have a Stress-Free Renovation and Get the Kitchen of Your Dreams None 0.\n",
+      "Queríamos un Calatrava. Viajes arquitectónicos por la seducción y el repudio (Crónicas nº 112) (Spanish Edition) None 8.\n",
+      "Listening in on Museum Conversations None 30.\n",
+      "The Four Books of Architecture (Dover Architecture Book 1) None 14.\n",
+      "California Contemporary: The Houses of Grant C. Kirkpatrick and KAA Design None 19.\n",
+      "Norman Foster: A Life in Architecture None 9.\n",
+      "The Man in the Glass House: Philip Johnson, Architect of the Modern Century None 16.\n",
+      "Mickey Muenning: Dreams and Realizations for A Living Architecture None 14.\n",
+      "Designing a World-Class Architecture Firm: The People, Stories, and Strategies Behind HOK None 60.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for livre in livres :\n",
+    "    h2 = livre.h2\n",
+    "    titre = h2.text.strip()\n",
+    "    url_du_livre = h2.get('href')\n",
+    "    prix = livre.find('span' , class_ = 'a-price-whole').text.strip()\n",
+    "    print(titre,url_du_livre ,prix )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d929b8c",
    "metadata": {},
    "outputs": [],
    "source": []
