notebook scrapper ok

--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 91,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 92,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "id": "ea3aea10",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1008/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_541/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -128,7 +128,6 @@
    "cell_type": "markdown",
    "id": "b0ea0ae1",
    "metadata": {
-    "heading_collapsed": true,
     "tags": []
    },
    "source": [
@@ -137,11 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "id": "beffe270",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "regex_expression = \"</span> #.* in Kindle Store \" # utile pour regex"
@@ -149,11 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
+   "id": "8d7b337f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_yumkasi = \"https://www.amazon.com/Minoru-Yamasaki-Humanist-Architecture-Modernist-ebook/dp/B0798MHV9R/ref=sr_1_17?qid=1652127157&rnid=157630011&s=digital-text&sr=1-17\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "97335e48",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "url_livre =\"https://www.amazon.com/gp/product/B09XFL8N77?storeType=ebooks&pf_rd_p=1a003f54-b0fb-4c1f-847d-4b886d085c2a&pf_rd_r=1S6X1FD1D0CDDESY6F9C&pd_rd_wg=OYcWw&pd_rd_i=B09XFL8N77&ref_=dbs_0_def_rwt_wigo_nfy_recs_wigo_1&pd_rd_w=n45p7&pd_rd_r=29980150-6069-4b0c-9b26-a02de52121aa\"\n",
@@ -162,11 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
+   "id": "f21c8dab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.get(url_yumkasi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "id": "fc7ca572",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "code_de_la_page = browser.page_source\n",
@@ -175,11 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "id": "0fb54cd1",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "titre_livre = soup.find('span'  , {'class': 'a-size-extra-large'}).string"
@@ -187,19 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "id": "ecd283e5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' One Bossy Proposal: An Enemies to Lovers Romance '"
+       "' Minoru Yamasaki: Humanist Architecture for a Modernist World '"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,11 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 102,
    "id": "16d1c8ca",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rang_livre = soup.find_all( {'span'  : 'a-list-item'})"
@@ -222,11 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 103,
    "id": "358cd823",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rang_vente = str(re.compile(regex_expression).search(str(rang_livre))).split()[5].replace(\"#\",\"\").replace(\",\",\"\")"
@@ -234,19 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 104,
    "id": "8cbe64e4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'14'"
+       "'1110452'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,33 +259,59 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5451454d",
-   "metadata": {
-    "hidden": true
-   },
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "bbc92455",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "\n"
+    "def trouver_rang(url):\n",
+    "    browser.get(url)\n",
+    "    code_de_la_page = browser.page_source\n",
+    "    soup = BeautifulSoup(code_de_la_page , 'lxml')\n",
+    "    rang_livre = soup.find_all( {'span'  : 'a-list-item'})\n",
+    "    rang_vente = str(re.compile(regex_expression).search(str(rang_livre))).split()[5].replace(\"#\",\"\").replace(\",\",\"\")\n",
+    "    return str(rang_vente)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "70b06b8f",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'13'"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trouver_rang(url_livre2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "1f11aae8",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "books_html = soup.find_all(\"article\", class_=\"product_pod\")\n",
     "len(books_html)"
@@ -298,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "id": "fdac7e18",
    "metadata": {},
    "outputs": [],
@@ -312,23 +341,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 107,
    "id": "578a143b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser.get(url_page_2)\n",
-    "html_page_listing = browser.page_source\n",
-    "soup = BeautifulSoup(html_page_listing , 'lxml')\n",
-    "livres = soup.find_all('div' ,{ 'data-asin':True, 'data-component-type' : 's-search-result'}  )\n",
+    "browser.get(url_page_2) #navigue sur une page avec tous les lien du site\n",
+    "html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "livres = soup.find_all('div' ,{ 'data-asin':True, 'data-component-type' : 's-search-result'} )\n",
+    "#tous les livres de la pages\n",
     "\n",
-    "# le numéro ASIN correspeond à la gods\n",
+    "# le numéro ASIN correspeond à la ref du livre sur amazon\n",
     "# ASIN=B098652LH8P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 108,
    "id": "c0d0f48f",
    "metadata": {},
    "outputs": [
@@ -338,7 +368,7 @@
        "16"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +379,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 109,
+   "id": "297c2d66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_du_livre = 'https://www.amazon.com'+livres[2].h2.a.get('href')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "81b6899e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.amazon.com/Frank-Lloyd-Wright-Penguin-Lives-ebook/dp/B00188V7R8/ref=sr_1_19?qid=1652130424&rnid=157630011&s=digital-text&sr=1-19'"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url_du_livre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "a4c54c20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.get(url_du_livre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "cd5d3f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12'"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trouver_rang(\"https://www.amazon.com/Minoru-Yamasaki-Humanist-Architecture-Modernist-ebook/dp/B0798MHV9R/ref=sr_1_17?qid=1652130424&rnid=157630011&s=digital-text&sr=1-17\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "id": "cbf81fbc",
    "metadata": {},
    "outputs": [
@@ -357,22 +451,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minoru Yamasaki: Humanist Architecture for a Modernist World None 48.\n",
-      "Frank Lloyd Wright: A Life (Penguin Lives) None 11.\n",
-      "Goya: A Portrait of the Artist None 14.\n",
-      "Brunel: The Man Who Built the World (Phoenix Press) None 3.\n",
-      "Mies van der Rohe: A Critical Biography, New and Revised Edition None 12.\n",
-      "Manual of Section None 14.\n",
-      "Higher: A Historic Race to the Sky and the Making of a City None 7.\n",
-      "Remodel Your Kitchen Without Going Bonkers or Broke: Have a Stress-Free Renovation and Get the Kitchen of Your Dreams None 0.\n",
-      "Queríamos un Calatrava. Viajes arquitectónicos por la seducción y el repudio (Crónicas nº 112) (Spanish Edition) None 8.\n",
-      "Listening in on Museum Conversations None 30.\n",
-      "The Four Books of Architecture (Dover Architecture Book 1) None 14.\n",
-      "California Contemporary: The Houses of Grant C. Kirkpatrick and KAA Design None 19.\n",
-      "Norman Foster: A Life in Architecture None 9.\n",
-      "The Man in the Glass House: Philip Johnson, Architect of the Modern Century None 16.\n",
-      "Mickey Muenning: Dreams and Realizations for A Living Architecture None 14.\n",
-      "Designing a World-Class Architecture Firm: The People, Stories, and Strategies Behind HOK None 60.\n"
+      "Minoru Yamasaki: Humanist Architecture for a Modernist World https://www.amazon.com/Minoru-Yamasaki-Humanist-Architecture-Modernist-ebook/dp/B0798MHV9R/ref=sr_1_17?qid=1652130424&rnid=157630011&s=digital-text&sr=1-17 1110452 48 €\n",
+      "Higher: A Historic Race to the Sky and the Making of a City https://www.amazon.com/Higher-Historic-Race-Making-City-ebook/dp/B000FBJCQW/ref=sr_1_18?qid=1652130424&rnid=157630011&s=digital-text&sr=1-18 497493 7 €\n",
+      "Frank Lloyd Wright: A Life (Penguin Lives) https://www.amazon.com/Frank-Lloyd-Wright-Penguin-Lives-ebook/dp/B00188V7R8/ref=sr_1_19?qid=1652130424&rnid=157630011&s=digital-text&sr=1-19 578514 11 €\n",
+      "Goya: A Portrait of the Artist https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_20?qid=1652130424&rnid=157630011&s=digital-text&sr=1-20 280686 14 €\n",
+      "Brunel: The Man Who Built the World (Phoenix Press) https://www.amazon.com/Brunel-Man-Who-Built-World-ebook/dp/B00GU2W0BY/ref=sr_1_21?qid=1652130424&rnid=157630011&s=digital-text&sr=1-21 547361 3 €\n",
+      "Mies van der Rohe: A Critical Biography, New and Revised Edition https://www.amazon.com/Mies-van-Rohe-Critical-Biography-ebook/dp/B009PS2L5K/ref=sr_1_22?qid=1652130424&rnid=157630011&s=digital-text&sr=1-22 803718 12 €\n",
+      "Manual of Section https://www.amazon.com/Manual-Section-Paul-Lewis-ebook/dp/B01HNJ93VW/ref=sr_1_23?qid=1652130424&rnid=157630011&s=digital-text&sr=1-23 819064 14 €\n",
+      "Queríamos un Calatrava. Viajes arquitectónicos por la seducción y el repudio (Crónicas nº 112) (Spanish Edition) https://www.amazon.com/Quer%C3%ADamos-Calatrava-arquitect%C3%B3nicos-seducci%C3%B3n-Cr%C3%B3nicas-ebook/dp/B01LZXUQNV/ref=sr_1_24?qid=1652130424&rnid=157630011&s=digital-text&sr=1-24 3589930 8 €\n",
+      "Remodel Your Kitchen Without Going Bonkers or Broke: Have a Stress-Free Renovation and Get the Kitchen of Your Dreams https://www.amazon.com/Remodel-Kitchen-Without-Going-Bonkers-ebook/dp/B08P9ZXHLZ/ref=sr_1_25?qid=1652130424&rnid=157630011&s=digital-text&sr=1-25 316212 0 €\n",
+      "Listening in on Museum Conversations https://www.amazon.com/Listening-Museum-Conversations-Gaea-Leinhardt-ebook/dp/B00F1WJTZ4/ref=sr_1_26?qid=1652130424&rnid=157630011&s=digital-text&sr=1-26 3164042 30 €\n",
+      "California Contemporary: The Houses of Grant C. Kirkpatrick and KAA Design https://www.amazon.com/California-Contemporary-Houses-Kirkpatrick-Design-ebook/dp/B07CVR854W/ref=sr_1_27?qid=1652130424&rnid=157630011&s=digital-text&sr=1-27 835068 19 €\n",
+      "The Four Books of Architecture (Dover Architecture Book 1) https://www.amazon.com/Four-Books-Architecture-Dover-Book-ebook/dp/B00CWR4LIG/ref=sr_1_28?qid=1652130424&rnid=157630011&s=digital-text&sr=1-28 466335 14 €\n",
+      "Norman Foster: A Life in Architecture https://www.amazon.com/Norman-Foster-Architecture-Deyan-Sudjic-ebook/dp/B07QT7KLNF/ref=sr_1_29?qid=1652130424&rnid=157630011&s=digital-text&sr=1-29 663237 9 €\n",
+      "The Man in the Glass House: Philip Johnson, Architect of the Modern Century https://www.amazon.com/Man-Glass-House-Johnson-Architect-ebook/dp/B07DTC5N92/ref=sr_1_30?qid=1652130424&rnid=157630011&s=digital-text&sr=1-30 887775 16 €\n",
+      "Mickey Muenning: Dreams and Realizations for A Living Architecture https://www.amazon.com/Mickey-Muenning-Dreams-Realizations-Architecture-ebook/dp/B00LAN7MW0/ref=sr_1_31?qid=1652130424&rnid=157630011&s=digital-text&sr=1-31 795727 14 €\n",
+      "Designing a World-Class Architecture Firm: The People, Stories, and Strategies Behind HOK https://www.amazon.com/Designing-World-Class-Architecture-Firm-Strategies-ebook/dp/B086BL6VV4/ref=sr_1_32?qid=1652130424&rnid=157630011&s=digital-text&sr=1-32 1474813 60 €\n"
      ]
     }
    ],
@@ -380,15 +474,24 @@
     "for livre in livres :\n",
     "    h2 = livre.h2\n",
     "    titre = h2.text.strip()\n",
-    "    url_du_livre = h2.get('href')\n",
-    "    prix = livre.find('span' , class_ = 'a-price-whole').text.strip()\n",
-    "    print(titre,url_du_livre ,prix )"
+    "    url_du_livre = 'https://www.amazon.com' + h2.a.get('href')\n",
+    "    prix = livre.find('span' , class_ = 'a-price-whole').text.strip(' ').strip('.')\n",
+    "    rang = trouver_rang(url_du_livre)\n",
+    "    print(titre,url_du_livre,rang,prix,'€')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9d929b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f44a02",
    "metadata": {},
    "outputs": [],
    "source": []
