--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,8 @@
     "import os\n",
     "# from webdriver_manager.chrome import ChromeDriverManager\n",
     "# import chromedriver_binary\n",
-    "import re"
+    "import re\n",
+    "import csv"
    ]
   },
   {
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 39,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 40,
    "id": "ea3aea10",
    "metadata": {},
    "outputs": [],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 41,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -94,7 +95,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_541/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_878/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 42,
    "id": "beffe270",
    "metadata": {},
    "outputs": [],
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "id": "8d7b337f",
    "metadata": {},
    "outputs": [],
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 44,
    "id": "97335e48",
    "metadata": {},
    "outputs": [],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 45,
    "id": "f21c8dab",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 46,
    "id": "fc7ca572",
    "metadata": {},
    "outputs": [],
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 47,
    "id": "0fb54cd1",
    "metadata": {},
    "outputs": [],
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 48,
    "id": "ecd283e5",
    "metadata": {},
    "outputs": [
@@ -208,7 +209,7 @@
        "' Minoru Yamasaki: Humanist Architecture for a Modernist World '"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 49,
    "id": "16d1c8ca",
    "metadata": {},
    "outputs": [],
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 50,
    "id": "358cd823",
    "metadata": {},
    "outputs": [],
@@ -239,17 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 51,
    "id": "8cbe64e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1110452'"
+       "'1169342'"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 52,
    "id": "bbc92455",
    "metadata": {},
    "outputs": [],
@@ -276,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 53,
    "id": "70b06b8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'13'"
+       "'14'"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 54,
    "id": "1f11aae8",
    "metadata": {},
    "outputs": [
@@ -307,7 +308,7 @@
        "0"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 55,
    "id": "fdac7e18",
    "metadata": {},
    "outputs": [],
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 56,
    "id": "578a143b",
    "metadata": {},
    "outputs": [],
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 57,
    "id": "c0d0f48f",
    "metadata": {},
    "outputs": [
@@ -368,7 +369,7 @@
        "16"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 58,
    "id": "297c2d66",
    "metadata": {},
    "outputs": [],
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 59,
    "id": "81b6899e",
    "metadata": {
     "scrolled": true
@@ -398,10 +399,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.amazon.com/Frank-Lloyd-Wright-Penguin-Lives-ebook/dp/B00188V7R8/ref=sr_1_19?qid=1652130424&rnid=157630011&s=digital-text&sr=1-19'"
+       "'https://www.amazon.com/Higher-Historic-Race-Making-City-ebook/dp/B000FBJCQW/ref=sr_1_19?qid=1652243416&rnid=157630011&s=digital-text&sr=1-19'"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 60,
    "id": "a4c54c20",
    "metadata": {},
    "outputs": [],
@@ -422,17 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 61,
    "id": "cd5d3f09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12'"
+       "'1169342'"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,30 +444,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 103,
+   "id": "9d929b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ecrire_csv(ads):\n",
+    "    with open('results.csv','a') as f :\n",
+    "        fields=['title','price','url','rang']\n",
+    "        writer = csv.DictWriter(f,fieldnames = fields)\n",
+    "        for ad in ads :\n",
+    "            print(ad)\n",
+    "            writer.writerows(ads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "cfd65b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste_test=[{'title':'titre1','price':'18euros','url':'www.lelirvr.com','rang':'1874'},{'title':'titre2','price':'19euros','url':'www.lelirvr2.com','rang':'2222'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "fe21badd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecrire_csv(liste_test)#permet d'écire uen liste de dictionnaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "id": "cbf81fbc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minoru Yamasaki: Humanist Architecture for a Modernist World https://www.amazon.com/Minoru-Yamasaki-Humanist-Architecture-Modernist-ebook/dp/B0798MHV9R/ref=sr_1_17?qid=1652130424&rnid=157630011&s=digital-text&sr=1-17 1110452 48 €\n",
-      "Higher: A Historic Race to the Sky and the Making of a City https://www.amazon.com/Higher-Historic-Race-Making-City-ebook/dp/B000FBJCQW/ref=sr_1_18?qid=1652130424&rnid=157630011&s=digital-text&sr=1-18 497493 7 €\n",
-      "Frank Lloyd Wright: A Life (Penguin Lives) https://www.amazon.com/Frank-Lloyd-Wright-Penguin-Lives-ebook/dp/B00188V7R8/ref=sr_1_19?qid=1652130424&rnid=157630011&s=digital-text&sr=1-19 578514 11 €\n",
-      "Goya: A Portrait of the Artist https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_20?qid=1652130424&rnid=157630011&s=digital-text&sr=1-20 280686 14 €\n",
-      "Brunel: The Man Who Built the World (Phoenix Press) https://www.amazon.com/Brunel-Man-Who-Built-World-ebook/dp/B00GU2W0BY/ref=sr_1_21?qid=1652130424&rnid=157630011&s=digital-text&sr=1-21 547361 3 €\n",
-      "Mies van der Rohe: A Critical Biography, New and Revised Edition https://www.amazon.com/Mies-van-Rohe-Critical-Biography-ebook/dp/B009PS2L5K/ref=sr_1_22?qid=1652130424&rnid=157630011&s=digital-text&sr=1-22 803718 12 €\n",
-      "Manual of Section https://www.amazon.com/Manual-Section-Paul-Lewis-ebook/dp/B01HNJ93VW/ref=sr_1_23?qid=1652130424&rnid=157630011&s=digital-text&sr=1-23 819064 14 €\n",
-      "Queríamos un Calatrava. Viajes arquitectónicos por la seducción y el repudio (Crónicas nº 112) (Spanish Edition) https://www.amazon.com/Quer%C3%ADamos-Calatrava-arquitect%C3%B3nicos-seducci%C3%B3n-Cr%C3%B3nicas-ebook/dp/B01LZXUQNV/ref=sr_1_24?qid=1652130424&rnid=157630011&s=digital-text&sr=1-24 3589930 8 €\n",
-      "Remodel Your Kitchen Without Going Bonkers or Broke: Have a Stress-Free Renovation and Get the Kitchen of Your Dreams https://www.amazon.com/Remodel-Kitchen-Without-Going-Bonkers-ebook/dp/B08P9ZXHLZ/ref=sr_1_25?qid=1652130424&rnid=157630011&s=digital-text&sr=1-25 316212 0 €\n",
-      "Listening in on Museum Conversations https://www.amazon.com/Listening-Museum-Conversations-Gaea-Leinhardt-ebook/dp/B00F1WJTZ4/ref=sr_1_26?qid=1652130424&rnid=157630011&s=digital-text&sr=1-26 3164042 30 €\n",
-      "California Contemporary: The Houses of Grant C. Kirkpatrick and KAA Design https://www.amazon.com/California-Contemporary-Houses-Kirkpatrick-Design-ebook/dp/B07CVR854W/ref=sr_1_27?qid=1652130424&rnid=157630011&s=digital-text&sr=1-27 835068 19 €\n",
-      "The Four Books of Architecture (Dover Architecture Book 1) https://www.amazon.com/Four-Books-Architecture-Dover-Book-ebook/dp/B00CWR4LIG/ref=sr_1_28?qid=1652130424&rnid=157630011&s=digital-text&sr=1-28 466335 14 €\n",
-      "Norman Foster: A Life in Architecture https://www.amazon.com/Norman-Foster-Architecture-Deyan-Sudjic-ebook/dp/B07QT7KLNF/ref=sr_1_29?qid=1652130424&rnid=157630011&s=digital-text&sr=1-29 663237 9 €\n",
-      "The Man in the Glass House: Philip Johnson, Architect of the Modern Century https://www.amazon.com/Man-Glass-House-Johnson-Architect-ebook/dp/B07DTC5N92/ref=sr_1_30?qid=1652130424&rnid=157630011&s=digital-text&sr=1-30 887775 16 €\n",
-      "Mickey Muenning: Dreams and Realizations for A Living Architecture https://www.amazon.com/Mickey-Muenning-Dreams-Realizations-Architecture-ebook/dp/B00LAN7MW0/ref=sr_1_31?qid=1652130424&rnid=157630011&s=digital-text&sr=1-31 795727 14 €\n",
-      "Designing a World-Class Architecture Firm: The People, Stories, and Strategies Behind HOK https://www.amazon.com/Designing-World-Class-Architecture-Firm-Strategies-ebook/dp/B086BL6VV4/ref=sr_1_32?qid=1652130424&rnid=157630011&s=digital-text&sr=1-32 1474813 60 €\n"
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'keys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [108]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#print(titre,url_du_livre,rang,prix,'€')\u001b[39;00m\n\u001b[1;32m      8\u001b[0m liste_in \u001b[38;5;241m=\u001b[39m [titre,prix,url_du_livre,rang]\n\u001b[0;32m----> 9\u001b[0m \u001b[43mecrire_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mliste_in\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [103]\u001b[0m, in \u001b[0;36mecrire_csv\u001b[0;34m(ads)\u001b[0m\n\u001b[1;32m      4\u001b[0m writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictWriter(f,fieldnames \u001b[38;5;241m=\u001b[39m fields)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#for ad in ads :\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#    print(ad)\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[43mwriter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriterows\u001b[49m\u001b[43m(\u001b[49m\u001b[43mads\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/lib/python3.8/csv.py:157\u001b[0m, in \u001b[0;36mDictWriter.writerows\u001b[0;34m(self, rowdicts)\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwriterows\u001b[39m(\u001b[38;5;28mself\u001b[39m, rowdicts):\n\u001b[0;32m--> 157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriterows\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dict_to_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrowdicts\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/lib/python3.8/csv.py:147\u001b[0m, in \u001b[0;36mDictWriter._dict_to_list\u001b[0;34m(self, rowdict)\u001b[0m\n\u001b[1;32m    145\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_dict_to_list\u001b[39m(\u001b[38;5;28mself\u001b[39m, rowdict):\n\u001b[1;32m    146\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mextrasaction \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 147\u001b[0m         wrong_fields \u001b[38;5;241m=\u001b[39m \u001b[43mrowdict\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkeys\u001b[49m() \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfieldnames\n\u001b[1;32m    148\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m wrong_fields:\n\u001b[1;32m    149\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdict contains fields not in fieldnames: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    150\u001b[0m                              \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;28mrepr\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m wrong_fields]))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'keys'"
      ]
     }
    ],
@@ -477,16 +506,10 @@
     "    url_du_livre = 'https://www.amazon.com' + h2.a.get('href')\n",
     "    prix = livre.find('span' , class_ = 'a-price-whole').text.strip(' ').strip('.')\n",
     "    rang = trouver_rang(url_du_livre)\n",
-    "    print(titre,url_du_livre,rang,prix,'€')"
+    "    #print(titre,url_du_livre,rang,prix,'€')\n",
+    "    liste_in = [titre,prix,url_du_livre,rang]\n",
+    "    ecrire_csv(liste_in)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d929b8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
