fonction encrypter ok

--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "09324be2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_546/2348712840.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
+     ]
+    }
+   ],
+   "source": [
+    "DRIVER_PATH_chromedriver = str(Path('../chromedriver').resolve())\n",
+    "browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "beffe270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regex_expression = \"</span> #.* in Kindle Store \" # utile pour regex"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6efdfb72",
    "metadata": {},
@@ -44,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -59,14 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "id": "ea3aea10",
    "metadata": {},
    "outputs": [],
    "source": [
     "url_livre1=\"https://www.amazon.com/Last-Goddess-Novel-Kate%C5%99ina-Tu%C4%8Dkov%C3%A1-ebook/dp/B09BZ8L74Q/ref=pd_sbs_sccl_1_3/131-3814768-2928133?pd_rd_w=eOyFv&pf_rd_p=3676f086-9496-4fd7-8490-77cf7f43f846&pf_rd_r=XXEVJ89KR0WC7CQF9791&pd_rd_r=ff1f8e44-e48e-4dcc-8716-a64d5675ebe6&pd_rd_wg=tAIJl&pd_rd_i=B09BZ8L74Q&psc=1\"\n",
     "url_livre2=\"https://www.amazon.com/gp/product/B09K7J47Y8/ref=s9_acss_bw_cg_bsmafr_1b1_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-13&pf_rd_r=EX2QJTNDW0DCKTRX8KFT&pf_rd_t=101&pf_rd_p=5074797f-6c32-4283-a5a7-526fd1198645&pf_rd_i=14413390011\"\n",
-    "url_livre3=\"https://www.amazon.com/Healthy-Smoothie-Cookbook-Breakfast-Kid-Friendly-ebook/dp/B083QK3DT9/ref=sr_1_12?keywords=smoothie+recipe+book&qid=1651700938&s=digital-text&sprefix=smoothie%2Cdigital-text%2C236&sr=1-12\""
+    "url_livre3=\"https://www.amazon.com/Healthy-Smoothie-Cookbook-Breakfast-Kid-Friendly-ebook/dp/B083QK3DT9/ref=sr_1_12?keywords=smoothie+recipe+book&qid=1651700938&s=digital-text&sprefix=smoothie%2Cdigital-text%2C236&sr=1-12\"\n",
+    "url_yumkasi = \"https://www.amazon.com/Minoru-Yamasaki-Humanist-Architecture-Modernist-ebook/dp/B0798MHV9R/ref=sr_1_17?qid=1652127157&rnid=157630011&s=digital-text&sr=1-17\""
    ]
   },
   {
@@ -87,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -95,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_534/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_546/2347370238.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -137,163 +168,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "beffe270",
+   "execution_count": 81,
+   "id": "a4854b59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "regex_expression = \"</span> #.* in Kindle Store \" # utile pour regex"
+    "def encrypter(url,titre,rang,prix):\n",
+    "    dictionnary = [{'url':url ,'titre':titre,  'rang':rang ,'prix':prix }]\n",
+    "    print(dictionnary)\n",
+    "    with open('results.csv','a') as f :                        # ouvre le fichier result.csv\n",
+    "        fields=['titre','rang','prix','url']                  # permet de faire un    \n",
+    "        writer = csv.DictWriter(f,fieldnames = fields)\n",
+    "        writer.writerows(dictionnary)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8d7b337f",
+   "execution_count": 82,
+   "id": "45739e9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_yumkasi = \"https://www.amazon.com/Minoru-Yamasaki-Humanist-Architecture-Modernist-ebook/dp/B0798MHV9R/ref=sr_1_17?qid=1652127157&rnid=157630011&s=digital-text&sr=1-17\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "97335e48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_livre =\"https://www.amazon.com/gp/product/B09XFL8N77?storeType=ebooks&pf_rd_p=1a003f54-b0fb-4c1f-847d-4b886d085c2a&pf_rd_r=1S6X1FD1D0CDDESY6F9C&pd_rd_wg=OYcWw&pd_rd_i=B09XFL8N77&ref_=dbs_0_def_rwt_wigo_nfy_recs_wigo_1&pd_rd_w=n45p7&pd_rd_r=29980150-6069-4b0c-9b26-a02de52121aa\"\n",
-    "browser.get(url_livre)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f21c8dab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.get(url_yumkasi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "fc7ca572",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code_de_la_page = browser.page_source\n",
-    "soup = BeautifulSoup(code_de_la_page , 'lxml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "0fb54cd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "titre_livre = soup.find('span'  , {'class': 'a-size-extra-large'}).string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "ecd283e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Minoru Yamasaki: Humanist Architecture for a Modernist World '"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titre_livre"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "16d1c8ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rang_livre = soup.find_all( {'span'  : 'a-list-item'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "358cd823",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rang_vente = str(re.compile(regex_expression).search(str(rang_livre))).split()[5].replace(\"#\",\"\").replace(\",\",\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "8cbe64e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1230423'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(rang_vente)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "bbc92455",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def trouver_rang(url):\n",
+    "def encryper_depuis_url_page_livre(url):\n",
     "    browser.get(url)\n",
     "    code_de_la_page = browser.page_source\n",
     "    soup = BeautifulSoup(code_de_la_page , 'lxml')\n",
     "    rang_livre = soup.find_all( {'span'  : 'a-list-item'})\n",
-    "    rang_vente = str(re.compile(regex_expression).search(str(rang_livre))).split()[5].replace(\"#\",\"\").replace(\",\",\"\")\n",
-    "    return str(rang_vente)"
+    "    # URL du livre OK\n",
+    "    url = url \n",
+    "    # titre du livre\n",
+    "    titre = soup.find('span'  , {'class': 'a-size-extra-large'}).string\n",
+    "    #rang du livre OK\n",
+    "    rang = str(re.compile(regex_expression).search(str(rang_livre))).split()[5].replace(\"#\",\"\").replace(\",\",\"\") \n",
+    "    #prix du livre\n",
+    "    prix = soup.find('span' , class_ = 'a-price-whole').text.strip(' ').strip('.')\n",
+    "    encrypter(url,titre,rang,prix)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "70b06b8f",
+   "execution_count": 84,
+   "id": "72b13c46",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'14'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'url': 'https://www.amazon.com/Healthy-Smoothie-Cookbook-Breakfast-Kid-Friendly-ebook/dp/B083QK3DT9/ref=sr_1_12?keywords=smoothie+recipe+book&qid=1651700938&s=digital-text&sprefix=smoothie%2Cdigital-text%2C236&sr=1-12', 'titre': ' The Healthy Smoothie Cookbook: Breakfast Smoothie, Body Cleansing Smoothies, Digestive Smoothies, Kid-Friendly Smoothies, Low-Fat Smoothies, Best Protein Smoothies, Easy to Make Weight loss Smoothies ', 'rang': '382571', 'prix': '6'}]\n"
+     ]
     }
    ],
    "source": [
-    "trouver_rang(url_livre2)"
+    "#TEST\n",
+    "encryper_depuis_url_page_livre(url_livre3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e67d360f",
+   "metadata": {},
+   "source": [
+    "# Sur une page récupérer les données : de classement de vente , nom du livre catérgorie"
    ]
   },
   {
@@ -316,14 +253,6 @@
    "source": [
     "books_html = soup.find_all(\"article\", class_=\"product_pod\")\n",
     "len(books_html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e67d360f",
-   "metadata": {},
-   "source": [
-    "# Sur une page récupérer les données : de classement de vente , nom du livre catérgorie"
    ]
   },
   {
@@ -444,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "9d929b8c",
    "metadata": {},
    "outputs": [],
@@ -460,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "cfd65b6a",
    "metadata": {},
    "outputs": [],
@@ -470,12 +399,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "fe21badd",
+   "execution_count": 67,
+   "id": "6e84fd4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ecrire_csv(liste_test)#permet d'écire uen liste de dictionnaire"
+    "liste_test_unique_dictionnary = [{'titre':'titre1','prix':'18euros','url':'www.lelirvr.com','rang':'1874'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "fe21badd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titre': 'titre1', 'prix': '18euros', 'url': 'www.lelirvr.com', 'rang': '1874'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ecrire_csv(liste_test_unique_dictionnary)#permet d'écire uen liste de dictionnaire"
    ]
   },
   {
@@ -680,9 +627,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encrypter(url,titre,rang,prix):\n",
-    "    dictionnary = {'url':url ,'titre':titre,  'rang':rang ,'prix':prix }\n",
-    "    \n",
+    "\n",
     "    "
    ]
   }
